2006-03-09  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/native/String.c (java_lang_String_intern0): 
	Added cast to remove constness from interned string and fix
	a compiler warning.

2006-03-09  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/math/BigInteger.c (Java_java_math_BigInteger_assignLong0): 
	Use LL instead of L for the masking constants for jlongs.

	* libraries/clib/native/TimeZone.c (java_util_VMTimeZone_getSystemTimeZoneId): 
	Made tempZoneName const to fix a compiler warning.

2006-03-08  Guilhem Lavaux  <guilhem@kaffe.org>

	Fix bug #23
	
	* libraries/clib/awt/nano-X/Makefile.in: Regenerated.
	
	* libraries/clib/awt/nano-X/Makefile.am,
	libraries/clib/awt/nano-X/clipboard.c,
	libraries/clib/awt/nano-X/event.c,
	libraries/clib/awt/nano-X/font.c,
	libraries/clib/awt/nano-X/graphics.c,
	libraries/clib/awt/nano-X/image.c,
	libraries/clib/awt/nano-X/window.c: Adapted to Classpath's RawData
	structure.

2006-03-08  Dalibor Topic  <robilad@kaffe.org>

	* test/regression/Reflect.java: Updated for java.lang.System
	changes.

	* Resynchronized GNU Classpath. Reapplied patch for
	URLClassLoader pending review.

2006-03-08  Dalibor Topic  <robilad@kaffe.org>

	* Resynchronized GNU Classpath 0.90. Reapplied patch for
	URLClassLoader pending review.

2006-03-06  Dalibor Topic  <robilad@kaffe.org>

        * gnu/java/net/protocol/file/Connection.java (unquote):
        Update position in buffer after decoding a unicode character
        outside of the basic plane.

2006-03-05  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/kaffe.def: Small cleanup to
	make debugging Cygwin crash a little easier.

	* kaffe/kaffevm/soft.c: Include "native.h".

	* kaffe/kaffevm/soft.c, kaffe/kaffevm/soft.h:
	(soft_lookupinterfacemethod) Added const qualifiers
	to parameters.

        * libraries/javalib/external/classpath/java/net/URI.java (quote):
	Reapplied patch from 2006-02-13  Dalibor Topic  <robilad@kaffe.org>
